syntax = "proto3";

import "google/protobuf/empty.proto";
import "v1/misc/common.proto";

package v1.ha_node_agent;


// Service for managing node-agent rpc calls
service HaNodeRpc {
  rpc ReplacePath (ReplacePathRequest) returns (google.protobuf.Empty) {}
  rpc GetNvmeController (GetNvmeControllerRequest) returns (GetNvmeControllerResponse){}
}

// Path replacement message.
message ReplacePathRequest {
  // NQN of the target
  string target_nqn = 1;

  // URI of the new path
  string new_path = 2;

  // Pubish context of the volume
  common.MapWrapper publish_context = 3;
}

message GetNvmeControllerRequest{
  string nvme_path = 1;
}

message GetNvmeControllerResponse{
  oneof reply {
    NvmeControllers nvme_controllers = 1;
    common.ReplyError error = 2;
  }
}

message NvmeControllers{
  repeated string target_address = 1;
}